--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="en" class="h-[100vh]">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/dist/output.css" rel="stylesheet">
-    <title>Vite + Vue</title>
+    <title>Foodweb</title>
   </head>
   <body>
   <body class="h-[100vh] bg-gray-100">
